# stables

./: .cursorrules  .gitignore  README.md  pyproject.toml  stables.ipynb  usde.py
data/: llama_stablecoins_peggedAssets_2024-10-28.json
notebooks/: 1.ipynb  c.txt  stables.ipynb
src/stables/api/: __init__.py  defi_llama.py
src/stables/processor/: __init__.py  processor.py
src/stables/visualization/: __init__.py  dashboard.py
src/utils/: llama.py
temp/: stake.sql  supply.sql  transfer.sql
usde/: curve.sql  lp_stake.sql  transfer.sql
