[tool.poetry]
name = "stables"
version = "0.1.0"
description = "A modular stablecoin data fetcher and dashboard"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"
pandas = "^2.2.1"
streamlit = "^1.32.2"
plotly = "^5.20.0"
numpy = "^1.26.0"
requests = "^2.31.0"
dash = "^2.14.0"
python-dotenv = "^1.0.0"
pydantic = "^2.6.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
